# tikpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/tikpp/: api.hpp  api_repository.hpp  basic_api.hpp  crypto.hpp  error_code.hpp  io_context.hpp  request.hpp  response.hpp  sentence.hpp  ssl_api.hpp  tokens.hpp
include/tikpp/commands/: add.hpp  getall.hpp  listen.hpp  login.hpp  remove.hpp  set.hpp
include/tikpp/data/: interface.hpp  model.hpp  query.hpp  repository.hpp
include/tikpp/data/converters/: creator.hpp  dissolver.hpp  proplist_collector.hpp
include/tikpp/data/ip/: hotspot.hpp
include/tikpp/data/ip/hotspot/: user.hpp  user_profile.hpp
include/tikpp/data/types/: bytes.hpp  duration.hpp  identity.hpp  wrapper.hpp
include/tikpp/detail/: async_result.hpp  convert.hpp  crypto.hpp  ssl_wrapper.hpp  type_traits.hpp
include/tikpp/detail/operations/: async_connect.hpp  async_read_response.hpp  async_read_word.hpp  async_read_word_length.hpp
include/tikpp/detail/type_traits/: error_handler.hpp  macros.hpp  model.hpp  operators.hpp  stream.hpp
include/tikpp/models/: convert.hpp  converters.hpp  creator.hpp  dissolver.hpp  interface.hpp  model.hpp  proplist_collector.hpp  query.hpp
include/tikpp/models/ip/: address.hpp  arp.hpp  hotspot.hpp
include/tikpp/models/ip/hotspot/: active.hpp  cookie.hpp  host.hpp  ip_binding.hpp  profile.hpp  user.hpp  user_profile.hpp
include/tikpp/models/types/: arithmetic_wrapper.hpp  bytes.hpp  duration.hpp  identity.hpp  logic_wrapper.hpp  one_way.hpp  readonly.hpp  two_way.hpp  wrapper.hpp
src/: crypto.cpp  error.cpp  request.cpp  response.cpp
tests/: CMakeLists.txt  basic_api_tests.cpp  request_tests.cpp  response_tests.cpp
tests/include/tikpp/tests/fakes/: model.hpp  socket.hpp
tests/include/tikpp/tests/fixtures/: basic_api.hpp  socket.hpp
tests/include/tikpp/tests/util/: random.hpp
tests/mocks/: socket.hpp
tests/src/: async_read_response_tests.cpp  async_read_word_length_tests.cpp  async_read_word_tests.cpp  basic_api_tests.cpp  command_set_tests.cpp  commands_add_tests.cpp  commands_set_tests.cpp  convert_back_tests.cpp  convert_tests.cpp  data_converter_creator_tests.cpp  data_converter_dissolver_tests.cpp  data_converter_proplist_collector_tests.cpp  data_query_tests.cpp  data_repository_tests.cpp  data_type_bytes_tests.cpp  data_type_duration_tests.cpp  data_type_identity_tests.cpp  data_type_one_way_tests.cpp  data_type_read_only_tests.cpp  data_type_read_write_tests.cpp  data_type_stateful_value_wrapper_tests.cpp  data_type_stateful_wrapper_tests.cpp  data_type_stateless_value_wrapper_tests.cpp  data_type_two_way_tests.cpp  models_creator_tests.cpp  models_dissolver_tests.cpp  operation_async_connect_tests.cpp  operation_async_read_response_tests.cpp  operation_async_read_word_length_tests.cpp  operation_async_read_word_tests.cpp  proplist_collector_tests.cpp  query_tests.cpp  request_tests.cpp  response_tests.cpp  test_client.cpp  types_arithmetic_wrapper_tests.cpp  types_bytes_tests.cpp  types_duration_tests.cpp  types_identity_tests.cpp  types_logic_wrapper_tests.cpp  (+3 more)
